--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "lucide-react": "^0.544.0",
     "mysql2": "^3.12.0",
     "node-cron": "^3.0.3",
     "socket.io": "^4.8.1"
