--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,33 @@
-DB_HOST=localhost
+#PRODUCTION
+# DB_HOST=192.168.10.106
+# DB_USER=permata
+# DB_PASS=rspkrw
+# DB_NAME=antrian_farmasi
+# DB_PORT=7210
+# PORT=1311
+
+#LOCAL
+# DB_HOST=192.168.10.106
+# DB_USER=permata
+# DB_PASS=rspkrw
+# DB_NAME=antrian_farmasi
+# DB_PORT=7210
+# PORT=5000
+
+# ======================================
+# 🏭 PRODUCTION (Server 192.168.10.106)
+# ======================================
+DB_HOST=192.168.10.106
 DB_USER=permata
-DB_PASS=rspkrw2024
-DB_NAME=antrian_obat_farmasi
-PORT=5000
+DB_PASS=rspkrw   # ✅ gunakan DB_PASSWORD (bukan DB_PASS)
+DB_NAME=antrian_farmasi
+DB_PORT=7210
+
+# Server Express
+PORT=1311
+
+# JWT Secret
+JWT_SECRET=rahasia_super_aman
+
+# Mode
+NODE_ENV=production
