--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,7 @@
 #VITE_NETWORK=localhost:5000
-VITE_NETWORK=192.168.10.106:5000 
+#VITE_NETWORK=localhost:1311
+#VITE_NETWORK=192.168.10.106:5000 
+#VITE_NETWORK=192.168.10.106:1311 
+
+# 🔗 Base API URL (gunakan http, bukan https)
+VITE_NETWORK=http://192.168.10.106:1311
